--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
           <div class="desencriptar">
             <label for="output-text"></label>
-            <textarea placeholder="Ningún mensaje fue encontrado" img src="Munheco.png"  type="text2"  alt="Placeholder Image" id="output-text" name="output-text" required></textarea>
+            <textarea placeholder="Ningún mensaje detectado" img src="Munheco.png"  type="text2"  alt="Placeholder Image" id="output-text" name="output-text" required></textarea>
             <button id="copy-btn">Copiar</button>
           </div>
 
