--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
             <div class="shape"> 
                 <div class="image"></div>
             </div>  
-            <h3>Yeisson Herrera</h3>
+            <h3>Alfredo Herrera</h3>
             <h4 class="title">Web developer</h4>
             <p>
                  Male
